--- a/guess-number.html
+++ b/guess-number.html
@@ -22,6 +22,23 @@
         color: white;
         padding: 3px;
       }
+	  @keyframes heading{
+		0%   {background-color:red; left:0px; top:0px;}
+		25%  {background-color:yellow; left:200px; top:0px;}
+		50%  {background-color:blue; left:200px; top:200px;}
+		75%  {background-color:green; left:0px; top:200px;}
+		100% {background-color:red; left:0px; top:0px;}
+	  }
+	  h1{ 
+		width: 400px;
+		height: 50px;
+		position: relative;
+		background-color: red;
+		animation-name: heading;
+		animation-duration: 4s;
+		animation-delay: 2s;
+		animation-iteration-count: infinite;
+	  }
     </style>
   </head>
 
